--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -12,6 +12,7 @@
   <input type="password" name="password" placeholder="Password"/> <br>
   <button>로그인</button>
 </form>
+<a href="/oauth2/authorization/google">구글 로그인</a><br> <!-- 주소는 oauth-client 라이브러리 쓰면 고정! -->
 <a href="/joinForm">회원가입을 아직 하지 않으셨나요?</a>
 </body>
 </html>
